--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,11 @@ h5 {
 }
 
 
+h3{
+  padding-top: 15px;
+  padding-left: 0;
+}
+
 .date-text {
   font-style: italic;
   font-size: 14px;
@@ -148,6 +153,11 @@ a {
   padding: 10px;
 }
 
+.flex-item{
+  display: inline-flex;
+
+}
+
 .center-content {
   padding: 2.5% 5%;
 }
@@ -155,6 +165,8 @@ a {
 ul {
   list-style-type: none;
 }
+
+
 
 .biopic {
   float: left;
